@@ -1,3 +1,9 @@
+Thu May 14 21:06:11 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>
+
+ - drivers/raritan-mib.h: use the outlets template mechanism and remove all
+   the OIDs defines for a better readability.
+ - drivers/snmp-ups.c: enable Raritan MIB back
+ 
 Thu May 14 19:19:52 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>
 
  - drivers/eaton-aphel-mib.h: use the outlets template mechanism.
@@ -9,7 +15,8 @@ Thu May 14 14:44:22 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>
 Thu May 14 14:23:41 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>
 
  - drivers/snmp-ups.[ch]: add a template mechanism for outlets declaration, and
-   the needed helpers. Also disable temporarily the Raritan MIB.
+   the needed helpers. Also disable temporarily the Raritan MIB as it conflicts
+   with Eaton (Aphel) .
 
 Wed May 13 13:54:32 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>
 
